@@ -132,6 +132,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-498: BookieRecoveryTest.tearDown NPE (fpj)
 
+        BOOKKEEPER-497: GcLedgersTest has a potential race (ivank via sijie)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
